--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "change-style-vars",
-  "version": "1.0.2",
-  "description": "scss、less util。To change the value of the sass or less variable 。and render to css",
-  "main": "adapter.js",
+  "name": "postcss-easy-tools",
+  "version": "1.0.1",
+  "description": "merge less、scss ，change less、scss variable",
+  "main": "index.js",
   "dependencies": {
     "less": "^3.9.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.11",
     "postcss-easy-import": "^3.0.0",
-    "postcss-import": "^12.0.1",
     "postcss-less": "^3.1.1",
-    "postcss-scss": "^2.0.0",
-    "postcss-url": "^8.0.0"
+    "postcss-scss": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
