--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "postcss-easy-tools",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "merge less、scss ，change less、scss variable",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "less": "^3.9.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.11",
     "postcss-easy-import": "^3.0.0",
     "postcss-less": "^3.1.1",
-    "postcss-scss": "^2.0.0"
+    "postcss-scss": "^2.0.0",
+    "postcss-url": "^8.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/",
+    "lint-fix": "eslint --fix src/ test/"
   },
   "repository": {
     "type": "git",
